# CrabAI

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: context.py  core.py  streaming.py
backend/app/api/: conversations.py  files.py  messages.py  router.py
backend/app/files/: image_parser.py  parser.py  pdf_parser.py  text_parser.py
backend/app/storage/: database.py  models.py  repositories.py
backend/app/tools/: base.py  code_execution.py  file_reader.py  memory_tool.py  registry.py  web_search.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  conversations.ts  files.ts  messages.ts
frontend/src/components/chat/: ChatInput.tsx  ChatView.tsx  MessageBubble.tsx  MessageList.tsx  StreamingIndicator.tsx
frontend/src/components/files/: FileChip.tsx
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/components/markdown/: MarkdownRenderer.tsx
frontend/src/components/tools/: ToolCallCard.tsx
frontend/src/hooks/: useChat.ts  useConversations.ts  useFileUpload.ts
frontend/src/store/: chatStore.ts
frontend/src/types/: index.ts
